--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Deterministic Site Password</title>
+<title>Hashpass</title>
 <meta name="description" content="Generate strong, site-specific passwords locally from your master + domain. Nothing is sent anywhere." />
 <style>
   :root { --fg:#111; --muted:#666; --bg:#fafafa; --card:#fff; --accent:#2563eb; --border:#e5e7eb; }
