--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="card">
     <div class="grid">
       <div>
-        <label for="domain">Domain <span class="muted">(auto from your URL is best)</span></label>
+        <label for="domain">Domain</label>
         <input id="domain" type="text" placeholder="example.com">
       </div>
       <div>
